alignment fixes

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -300,6 +300,8 @@ ul.parallax-viewport
       left 0
       right 0
 
+      padding 0 0 0 10px
+      
       text-align center
       font-weight bold
       text-shadow 0 10px 15px rgba(0,0,0,0.5)
